--- a/Regression/Linear Regression/Linear_Regression.ipynb
+++ b/Regression/Linear Regression/Linear_Regression.ipynb
@@ -25,7 +25,7 @@
         "from sklearn.preprocessing import MinMaxScaler\n",
         "from sklearn.linear_model import LinearRegression"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -52,7 +52,7 @@
         "    scaler = MinMaxScaler()\n",
         "    return scaler.fit_transform(array)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,7 +109,7 @@
         "                     where c = (1 / 2) sum((y - h)^2)\n",
         "        \"\"\"\n",
         "\n",
-        "        c = (1 / 2) * np.sum((h - y.T) ** 2)\n",
+        "        c = (1 / (2 * h.shape[1])) * np.sum((h - y.T) ** 2)\n",
         "        return c\n",
         "\n",
         "    def gradient(self, y, h, x):\n",
@@ -180,6 +180,22 @@
         "\n",
         "    def fit(self, x_train, y_train, learning_rate, num_iterations):\n",
         "\n",
+        "        \"\"\"\n",
+        "            Model's fit function.\n",
+        "\n",
+        "            Inputs:\n",
+        "\n",
+        "                - x_train        (numpy array of shape (num_dataPoints, num_features))\n",
+        "                - y_train        (numpy array of shape (num_dataPoints, 1))\n",
+        "                - learning rate  (float)\n",
+        "                - num_iterations (int)\n",
+        "\n",
+        "            Output:\n",
+        "\n",
+        "                - None (Updates model's parameters)\n",
+        "\n",
+        "        \"\"\"\n",
+        "\n",
         "        # Run Gradient Descent\n",
         "        d = self.gradient_descent(x_train, y_train, learning_rate, num_iterations)\n",
         "\n",
@@ -190,21 +206,48 @@
         "\n",
         "    def plot_cost(self):\n",
         "\n",
-        "        plt.plot(self.cost_history, '-')\n",
-        "        plt.title(\"Cost Function\")\n",
-        "        plt.show()      \n",
+        "        \"\"\"\n",
+        "            Plots the cost function over iterations.\n",
+        "        \"\"\"\n",
+        "\n",
+        "        if len(cost_history) == 0:\n",
+        "            print(\"Can't plot cost function. Fit the model first.\")\n",
+        "        else: \n",
+        "            plt.plot(self.cost_history, '-')\n",
+        "            plt.title(\"Cost Function\")\n",
+        "            plt.show()      \n",
         "\n",
         "    def validate(self, x_val, y_val):\n",
         "\n",
+        "        \"\"\"\n",
+        "            Inputs:\n",
+        "\n",
+        "                - x_val (numpy array of shape (num_dataPoints, num_features))\n",
+        "                - y_val (numpy array of shape (num_dataPoints, 1))\n",
+        "\n",
+        "            Output:\n",
+        "\n",
+        "                - Mean Squared Error of the model on the validation data.\n",
+        "        \"\"\"\n",
         "        predictions = hypothesis(self.w, self.b, x_val)\n",
         "        print(f\"Mean Squared Error = {cost(y_val, predictions)}\")\n",
         "\n",
         "    def predict(self, x_test):\n",
         "\n",
+        "        \"\"\"\n",
+        "            Inputs:\n",
+        "                \n",
+        "                - x_test (numpy array of shape (num_dataPoints, num_features))\n",
+        "\n",
+        "            Output:\n",
+        "\n",
+        "                - Model's predictions (numpy array of shape (1, num_dataPoints))\n",
+        "\n",
+        "        \"\"\"\n",
         "        predictions = hypothesis(self.w, self.b, x_val)\n",
         "        return predictions"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -225,7 +268,7 @@
         "train_df = pd.read_csv(\"sample_data/california_housing_train.csv\")\n",
         "test_df = pd.read_csv(\"sample_data/california_housing_train.csv\")"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -234,14 +277,13 @@
         "id": "ciydaVdz2b9u",
         "outputId": "d5aa386e-f374-47de-c7ab-4a17124f8bd9",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "train_df.info()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,8 +324,7 @@
         "id": "UOAE6JrX87Zo",
         "outputId": "5e593dfd-4511-444d-8186-abfa23f417b8",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -304,7 +345,7 @@
         "print(f\"x_train.shape: {x_train.shape}\")\n",
         "print(f\"x_test.shape: {x_test.shape}\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,8 +363,7 @@
         "id": "Kq1Jhk0X9EUm",
         "outputId": "a9c7c724-eb7a-4ad7-ee98-c85f1473bec3",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -338,7 +378,7 @@
         "print(f\"y_train.shape: {y_train.shape}\")\n",
         "print(f\"y_test.shape: {y_test.shape}\")"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,7 +419,7 @@
         "model.fit(x_train, y_train, learning_rate, num_iterations)\n",
         "print(model.w)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -417,7 +457,7 @@
         "sk_model.fit(x_train, y_train)\n",
         "print(sk_model.coef_)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
